--- a/config/settings.yml
+++ b/config/settings.yml
@@ -49,6 +49,7 @@ defaults: &defaults
     - webmaster
     - administrator
   disallowed_hashtags: # space separated string or list of hashtags without the hash
+  trend_hidden_hashtags: # space separated string or list of hashtags without the hash
   bootstrap_timeline_accounts: ''
   activity_api_enabled: true
   peers_api_enabled: true
