--- a/config/themes.yml
+++ b/config/themes.yml
@@ -1,3 +1,4 @@
 default: styles/application.scss
 contrast: styles/contrast.scss
 mastodon-light: styles/mastodon-light.scss
+slack-like-mastodon: styles/slack-like-mastodon.scss
